attempt 3 at stopping sass-cache
Signed-off-by: Logan McAnsh <l.m@loganmcansh.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 # Created by https://www.gitignore.io/api/sass,codekit,osx
 
 ### Sass ###
-assets/css/.sass-cache
+assets/css/.sass-cache/
+.sass-cache/
 *.css.map
 
 
